--- a/quantitative_biochemistry/Lecture 07 - Integration.ipynb
+++ b/quantitative_biochemistry/Lecture 07 - Integration.ipynb
@@ -360,7 +360,7 @@
     "\n",
     "so \n",
     "\n",
-    "$$ \\left [ x^2 \\right ]_{x_1}^{x_2} - \\int_{x_1}^{x_2} 2x. dx $$\n",
+    "$$ \\int_{x_1}^{x_2} 2x. dx = \\left [ x^2 \\right ]_{x_1}^{x_2} $$\n",
     "\n",
     "where the square brackets around our function mean \"the area of the function (here $x^2$) between the values $x=1$ and $x=2$\". The more positive number is always the top one.\n"
    ]
@@ -626,7 +626,7 @@
     "If there are limits, then it is called a DEFINITE INTEGRAL and when you impose the limits the constant $k$ is eliminated:\n",
     "\n",
     "\\begin{align*}\n",
-    "\\int^b_a 2s.dx &= \\left [ x^2 +k \\right ]_a^b\\\\\n",
+    "\\int^b_a 2x.dx &= \\left [ x^2 +k \\right ]_a^b\\\\\n",
     "&= (b^2 + k) - (a^2 +k)\\\\\n",
     "&= b^2 - a^2 +k -k\\\\\n",
     "&= b^2 - a^2\n",
@@ -639,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Integrating $\\frac{1}{x^n}$\n",
+    "## Integrating $\\frac{1}{x}$\n",
     "\n",
     "We earlier wrote (this time as an indefinte integral and not including the constant $a$)\n",
     "\n",
@@ -775,7 +775,7 @@
     "\n",
     "\\begin{align*}\n",
     "Q(t=1) - Q(t=4) &= \\int^4_1 Q'(t).dt \\\\\n",
-    "&= 3\\sqrt{t}.dt\\\\\n",
+    "&= \\int^4_1 3\\sqrt{t}.dt\\\\\n",
     "&= \\int^4_1 3t^{1/2}.dt\\\\\n",
     "&= \\left [ 3 \\times \\frac{1}{3/2} t^{3/2} \\right ]^4_1 \\quad\\text{remember we can check this by differentiating..}\\\\\n",
     "&= \\left [ 2t^{3/2} \\right ]_1^4\\\\\n",
@@ -985,7 +985,7 @@
     "&= \\int^{u(b)}_{u(a)} \\frac{1}{18}.u^{-1/2}.du\\\\\n",
     "&= \\frac{1}{18} \\int^{u(b)}_{u(a)} u^{-1/2}.du\\\\\n",
     "&= \\frac{1}{18} .\\left [ 2u^{1/2} \\right ]^{u(b)}_{u(a)}\\\\\n",
-    "&= \\frac{1}{9} \\left [ u^{1/2} \\right ]^b_a\\\\\n",
+    "&= \\frac{1}{9} \\left [ u^{1/2} \\right ]^{u(b)}_{u(a)}\\\\\n",
     "&= \\frac{1}{9} \\left [ (6x^3+4)^{1/2} \\right ]^b_a\\\\\n",
     "\\end{align*}\n",
     "\n",
