--- a/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
+++ b/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
@@ -27,7 +27,7 @@
     "&1. \\quad y = e^{2x} &\\quad y' &=\\\\\n",
     "&2. \\quad y=\\ln x &\\quad y' &=\\\\\n",
     "&3. \\quad y=\\ln 5x &\\quad y' &=\\\\\n",
-    "&4. \\quad \\int^{50}_5 2 dx &\\quad &=\\\\\n",
+    "&4. \\quad \\int^{50}_5 2. dx &\\quad &=\\\\\n",
     "&5. \\quad \\int^{4}_2 3x. dx &\\quad &=\\\\\n",
     "&6. \\quad \\int^{2}_1 4x^{-3}. dx &\\quad &=\\\\\n",
     "&7. \\quad \\int^{\\pi/2}_0 \\cos x. dx &\\quad &=\\\\\n",
@@ -657,7 +657,7 @@
     "\\begin{align*}\n",
     "\\int  1.\\ln x.dx &= (x +c_1)\\ln x - \\int (x+c_1).\\frac{1}{x}.dx\\\\\n",
     "&= x \\ln x +c_1\\ln x - \\int 1 + \\frac{c_1}{x}dx\\\\\n",
-    "&= x \\ln x + c_1\\ln x - x + c_1 \\ln x + c_2\\\\\n",
+    "&= x \\ln x + c_1\\ln x - x - c_1 \\ln x + c_2\\\\\n",
     "&= x \\ln x - x +c_2\n",
     "\\end{align*}"
    ]
@@ -691,6 +691,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Partial fractions\n",
+    "\n",
+    "How can we integrate?\n",
+    "\n",
+    "$$\\int \\frac{1}{(2x+1)(x-5)}.dx$$\n",
+    "\n",
+    "You will need to be able to integrate functions in this form in a few weeks when you consider rates.\n",
+    "\n",
+    "What we need here is not another method of integrating, but a way of rewriting that expression as the sum of several terms, each of which we CAN integrate. Those terms are called PARTIAL FRACTIONS and we apply the METHOD OF UNDETERMINED COEFFICIENTS.\n",
+    "\n",
+    "Since the denominator has two terms multipled together, we realise that we could rewrite the expression as the sum of two fractions\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{1}{(2x+1)(x-5)} &= \\frac{A}{2x+1} + \\frac{B}{x-5}\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $A$ and $B$ are coefficients (constants). But how do we find $A$ and $B$? The trick is to combine the two fractions on the RHS into a single fraction and then compare both sides.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{1}{(2x+1)(x-5)} &= \\frac{A}{2x+1} + \\frac{B}{x-5}\\\\\n",
+    "&= \\frac{A(x-5) + B(2x+1)}{(2x+1)(x-5)}\\\\\n",
+    "&= \\frac{Ax-5A + 2Bx+B}{(2x+1)(x-5)}\\\\\n",
+    "&= \\frac{x(A-2B) + (B-5A)}{(2x+1)(x-5)}\\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At first glance that just looks more complicated; the key is realising that on the LHS there are NO terms involving $x$ and hence\n",
+    "\n",
+    "$$A-2B = 0$$\n",
+    "\n",
+    "but since the denominator on the LHS is just unity this must also be true.\n",
+    "\n",
+    "$$B-5A = 1$$\n",
+    "\n",
+    "Together these form a pair of *simultaneous equations* that we can solve to find $A$ and $B$. Rearranging the first:\n",
+    "\n",
+    "$$A = -2B$$\n",
+    "\n",
+    "substituting into the second\n",
+    "\n",
+    "\\begin{align*}\n",
+    "B - (-10B) &= 1\\\\\n",
+    "11B &= 1\\\\\n",
+    "B &= \\frac{1}{11}\\\\\n",
+    "A &= -\\frac{2}{11}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Hence we can rewrite our complicated fraction as the sum of two simpler fractions:\n",
+    "\n",
+    "$$\\frac{1}{(2x+1)(x-5)} = -\\frac{2}{11(2x+1)}+ \\frac{1}{11(x-5)}$$\n",
+    "\n",
+    "That has nothing to do with integration; it is just algebra. So let's try the integration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "\\int \\frac{1}{(2x+1)(x-5)}.dx &= -\\frac{2}{11}\\int \\frac{1}{2x+1}.dx + \\frac{1}{11} \\int \\frac{1}{x-5}.dx\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Both of the integrals on the RHS look like the function of a function (but are different!) so substitution should work on both (i.e. two substitutions at once!). \n",
+    "\n",
+    "\\begin{align*}\n",
+    "u &= 2x+1 \\quad \\quad & w &= x-5\\\\\n",
+    "\\frac{du}{dx} &= 2 \\quad \\quad & \\frac{dw}{dx} &= 1\\\\\n",
+    "\\frac{dx}{du} &= \\frac{1}{2} \\quad \\quad & \\frac{dx}{dw} &= 1\n",
+    "\\end{align*}\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\int \\frac{1}{(2x+1)(x-5)}.dx &= -\\frac{2}{11}\\int \\frac{1}{2}.\\frac{1}{u}.du + \\frac{1}{11} \\int \\frac{1}{w}.dw\\\\\n",
+    "&= -\\frac{1}{11}\\int \\frac{1}{u}.du + \\frac{1}{11} \\int \\frac{1}{w}.dw\\\\\n",
+    "&= - \\frac{\\ln | 2x+1 |}{11} + \\frac{\\ln |x-5|}{11} + k\\\\\n",
+    "&= \\frac{1}{11} \\ln \\left ( \\left | \\frac{x-5}{2x+1} \\right | \\right ) + k\\\\\n",
+    "&= \\frac{1}{11} \\ln \\left ( B \\left | \\frac{x-5}{2x+1} \\right | \\right )\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $k= \\frac{1}{11}\\ln B$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are more complex partial fractions whose numerator are not simply numerical, but you do not need to know these for studying reaction rates, but you may see them in textbooks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Differentiation is usually straightforward, integration is a skill\n",
     "\n",
     "![differentiation v integration](images/xkcd-differentiation_and_integration.png)"
@@ -704,7 +800,7 @@
     "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
     "<b>For you:</b>\n",
     "Answer to Week 4 challenge. \n",
-    "The camel can travel 153.333 miles into the desert.\n",
+    "The German has the fish.\n",
     "</div>"
    ]
   },
