fixes so LaTeX compiles

--- a/quantitative_biochemistry/Lecture 09 - Differential Equations.ipynb
+++ b/quantitative_biochemistry/Lecture 09 - Differential Equations.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy, math, numpy\n",
@@ -52,11 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -186,14 +178,14 @@
    "source": [
     "### Example 1. When the first derivative is zero\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
-    "\\frac{dy}{dx} &=& 0 &\\text{equation already SEPARATED, so INTEGRATE both sides w.r.t. x}\\\\\n",
-    "\\int \\frac{dy}{dx} . dx &=& \\int 0.\\, dx\\\\\n",
-    "      \\int dy  &=& \\int 0.\\, dx\\\\\n",
-    "      y +k &=& A &\\text{$A$ and $k$ are constants}\\\\\n",
-    "      y &=& A-k\\\\\n",
-    "      y &=& B    &\\text{SIMPLIFY by writing $A-k$ as $B$, no INITIAL CONDITIONS to apply}\\\\  \n",
-    "\\end{eqnarray}$$\n",
+    "\\begin{align*}\n",
+    "\\frac{dy}{dx} &= 0 &\\text{equation already SEPARATED, so INTEGRATE both sides w.r.t. x}\\\\\n",
+    "\\int \\frac{dy}{dx} . dx &= \\int 0.\\, dx\\\\\n",
+    "      \\int dy  &= \\int 0.\\, dx\\\\\n",
+    "      y +k &= A &\\text{$A$ and $k$ are constants}\\\\\n",
+    "      y &= A-k\\\\\n",
+    "      y &= B    &\\text{SIMPLIFY by writing $A-k$ as $B$, no INITIAL CONDITIONS to apply}\\\\  \n",
+    "\\end{align*}\n",
     "\n",
     "Hence the general solution is \n",
     "\n",
@@ -216,14 +208,14 @@
    "source": [
     "### Example 2. When the first derivative is a constant, $c$\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
-    "\\frac{dy}{dx} &=& c &\\text{equation already SEPARATED, so INTEGRATE both sides w.r.t. x}\\\\\n",
-    "\\int \\frac{dy}{dx} . dx &=& \\int c.\\, dx\\\\\n",
-    "      \\int dy  &=& \\int c.\\, dx\\\\\n",
-    "      y +k &=& cx + A &\\text{$A$ and $k$ are constants}\\\\\n",
-    "      y &=& cx + A - k\\\\\n",
-    "      y &=& cx + B    &\\text{SIMPLIFY by writing $A-k$ as $B$, no INITIAL CONDITIONS to apply}\\\\  \n",
-    "\\end{eqnarray}$$\n",
+    "\\begin{align*}\n",
+    "\\frac{dy}{dx} &= c &\\text{equation already SEPARATED, so INTEGRATE both sides w.r.t. x}\\\\\n",
+    "\\int \\frac{dy}{dx} . dx &= \\int c.\\, dx\\\\\n",
+    "      \\int dy  &= \\int c.\\, dx\\\\\n",
+    "      y +k &= cx + A &\\text{$A$ and $k$ are constants}\\\\\n",
+    "      y &= cx + A - k\\\\\n",
+    "      y &= cx + B    &\\text{SIMPLIFY by writing $A-k$ as $B$, no INITIAL CONDITIONS to apply}\\\\  \n",
+    "\\end{align*}\n",
     "\n",
     "Hence the general solution is \n",
     "\n",
@@ -237,13 +229,13 @@
     "### Example 3. When the first derivative is a linear function of $x$\n",
     "\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
-    "\\frac{dy}{dx} &=& x + c &\\text{equation already SEPARATED, so INTEGRATE both sides w.r.t. x}\\\\\n",
-    "\\int \\frac{dy}{dx} . dx &=& \\int (x+c)\\, dx\\\\\n",
-    "      \\int dy  &=& \\int (x+c)\\, dx\\\\\n",
-    "      y +k &=& \\frac{x^2}{2} + cx + A &\\text{$A$ and $k$ are constants}\\\\\n",
-    "      y &=& \\frac{x^2}{2} + cx + A - k &\\text{SIMPLIFY by writing $A-k$ as $B$, no INITIAL CONDITIONS to apply}\\\\\n",
-    "\\end{eqnarray}$$\n",
+    "\\begin{align*}\n",
+    "\\frac{dy}{dx} &= x + c &\\text{equation already SEPARATED, so INTEGRATE both sides w.r.t. x}\\\\\n",
+    "\\int \\frac{dy}{dx} . dx &= \\int (x+c)\\, dx\\\\\n",
+    "      \\int dy  &= \\int (x+c)\\, dx\\\\\n",
+    "      y +k &= \\frac{x^2}{2} + cx + A &\\text{$A$ and $k$ are constants}\\\\\n",
+    "      y &= \\frac{x^2}{2} + cx + A - k &\\text{SIMPLIFY by writing $A-k$ as $B$, no INITIAL CONDITIONS to apply}\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "Hence the general solution is \n",
     "\n",
@@ -261,15 +253,15 @@
     "\n",
     "We can't work out a general solution as it will depend on the exact form of $f(x,y)$. Consider this example:\n",
     "\n",
-    "\\begin{eqnarray*}\n",
-    "\\frac{dy}{dx} &=& 5x^{3/2}y &\\text{first SEPARATE the variables}\\\\\n",
-    "\\frac{1}{y}\\frac{dy}{dx} &=& 5x^{3/2} &\\text{now INTEGRATE both sides w.r.t. x}\\\\\n",
-    "\\int \\frac{1}{y}\\frac{dy}{dx}.dx &=& \\int 5x^{3/2}dx\\\\\n",
-    "\\ln |y| + A &=& \\frac{5x^{5/2}}{5/2} + B & \\text{where $A$ and $B$ are constants of integration}\\\\\n",
-    "\\ln |y| &=& 2x^{5/2} + C & \\text{we have SIMPLIFIED by writing $C=B-A$}\\\\\n",
-    "|y| &=& e^{2x^{5/2}+C} &\\text{we can SIMPLIFY further by exponentiating both sides..}\\\\\n",
-    "|y| &=& Be^{2x^{5/2}} &\\text{..and defining $B=e^C$}\\\\\n",
-    "\\end{eqnarray*}\n"
+    "\\begin{align*}\n",
+    "\\frac{dy}{dx} &= 5x^{3/2}y &\\text{first SEPARATE the variables}\\\\\n",
+    "\\frac{1}{y}\\frac{dy}{dx} &= 5x^{3/2} &\\text{now INTEGRATE both sides w.r.t. x}\\\\\n",
+    "\\int \\frac{1}{y}\\frac{dy}{dx}.dx &= \\int 5x^{3/2}dx\\\\\n",
+    "\\ln |y| + A &= \\frac{5x^{5/2}}{5/2} + B & \\text{where $A$ and $B$ are constants of integration}\\\\\n",
+    "\\ln |y| &= 2x^{5/2} + C & \\text{we have SIMPLIFIED by writing $C=B-A$}\\\\\n",
+    "|y| &= e^{2x^{5/2}+C} &\\text{we can SIMPLIFY further by exponentiating both sides..}\\\\\n",
+    "|y| &= Be^{2x^{5/2}} &\\text{..and defining $B=e^C$}\\\\\n",
+    "\\end{align*}\n"
    ]
   },
   {
@@ -280,21 +272,21 @@
     "\n",
     "Again, we cannot generalise so consider:\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "e^x\\frac{dy}{dx} &=& \\frac{x}{y} &\\text{first SEPARATE the variables}\\\\\n",
-    "y \\frac{dy}{dx} &=& \\frac{x}{e^x} \\\\\n",
-    "y \\frac{dy}{dx} &=& x e^{-x} &\\text{now INTEGRATE both sides w.r.t. $x$}\\\\\n",
-    "\\int y \\frac{dy}{dx} dx &=& \\int x e^{-x} dx\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "e^x\\frac{dy}{dx} &= \\frac{x}{y} &\\text{first SEPARATE the variables}\\\\\n",
+    "y \\frac{dy}{dx} &= \\frac{x}{e^x} \\\\\n",
+    "y \\frac{dy}{dx} &= x e^{-x} &\\text{now INTEGRATE both sides w.r.t. $x$}\\\\\n",
+    "\\int y \\frac{dy}{dx} dx &= \\int x e^{-x} dx\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "At this point we need to recognise that the RHS can be done using integration by parts if we identify $u=x$ and $v'=e^{-x}$!\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\frac{y^2}{2} + c_1 &=& -x.e^{-x} + \\int e^{-x}.dx \\\\\n",
-    "&=& -xe^{-x} - e^{-x} + c_2 &\\text{$c_1$ and $c_2$ are constants of integration. Now SIMPLIFY.}\\\\\n",
-    "y^2 &=& -2e^{-x}(1+x) + c_3 &\\text{where $c_3=2(c_3=c_1)$}\\\\\n",
-    "y &=& \\pm \\sqrt{-2e^{-x}(1+x) + c_3} &\\text{could choose to write in this form}\\\\\n",
-    "\\end{eqnarray*}$$\n"
+    "\\begin{align*}\n",
+    "\\frac{y^2}{2} + c_1 &= -x.e^{-x} + \\int e^{-x}.dx \\\\\n",
+    "&= -xe^{-x} - e^{-x} + c_2 &\\text{$c_1$ and $c_2$ are constants of integration. Now SIMPLIFY.}\\\\\n",
+    "y^2 &= -2e^{-x}(1+x) + c_3 &\\text{where $c_3=2(c_3=c_1)$}\\\\\n",
+    "y &= \\pm \\sqrt{-2e^{-x}(1+x) + c_3} &\\text{could choose to write in this form}\\\\\n",
+    "\\end{align*}\n"
    ]
   },
   {
@@ -316,23 +308,23 @@
     "Once we have separated (which there is no need here) we can classify this equation by noting that there are NO terms involving $[A]$ on the right hand side and is therefore described as a **zeroth-order process**.\n",
     "\n",
     "\n",
-    "$$\n",
-    "\\begin{eqnarray*}\n",
-    "\\frac{d [A]}{dt} &=& -k &\\text{no integrate both sides w.r.t $t$}\\\\\n",
-    "\\int \\frac{d [A]}{dt}. dt &=& \\int -k\\, dt &\\text{we can take $k$ outside the integrand as it is constant}\\\\\n",
-    "\\int d[A] &=& -k \\int dt\\\\\n",
-    "[A_t] &=& -kt +c &\\text{note in the form $y=mx+c$}\\\\\n",
-    "\\end{eqnarray*}\n",
-    "$$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{d [A]}{dt} &= -k &\\text{no integrate both sides w.r.t $t$}\\\\\n",
+    "\\int \\frac{d [A]}{dt}. dt &= \\int -k\\, dt &\\text{we can take $k$ outside the integrand as it is constant}\\\\\n",
+    "\\int d[A] &= -k \\int dt\\\\\n",
+    "[A_t] &= -kt +c &\\text{note in the form $y=mx+c$}\\\\\n",
+    "\\end{align*}\n",
+    "\n",
     "\n",
     "To find out what value $c$ takes, we have to supply some initial conditions. If we say that when $t=0$, $[A]=[A_0]$, then we can substitute these in the equation above and solve for $c$.\n",
     "\n",
-    "$$\n",
-    "\\begin{eqnarray*}\n",
-    "[A_0] &=& -k\\times0 +c \\\\\n",
-    "c &=& [A_0]\\\\\n",
-    "\\end{eqnarray*}\n",
-    "$$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "[A_0] &= -k\\times0 +c \\\\\n",
+    "c &= [A_0]\\\\\n",
+    "\\end{align*}\n",
+    "\n",
     "\n",
     "and hence the solution is \n",
     "\n",
@@ -351,11 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -446,14 +434,14 @@
     "\n",
     "Applying **SISI**: \n",
     "\n",
-    "$$\n",
-    "\\begin{eqnarray*}\n",
-    "-\\frac{ds}{dt} &=& \\frac{V.s}{k+s} \\quad&\\text{SEPARATE and get all the terms in $s$ on the LHS}\\\\\n",
-    "- \\frac{k+s}{V.s} \\frac{ds}{dt} &=& 1 &\\text{now INTEGRATE both sides w.r.t. t}\\\\\n",
-    "- \\int \\frac{k+s}{V.s} \\frac{ds}{dt} dt &=& \\int dt\\\\\n",
-    "- \\int \\frac{k+s}{V.s} ds &=& \\int dt\n",
-    "\\end{eqnarray*}\n",
-    "$$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "-\\frac{ds}{dt} &= \\frac{V.s}{k+s} \\quad&\\text{SEPARATE and get all the terms in $s$ on the LHS}\\\\\n",
+    "- \\frac{k+s}{V.s} \\frac{ds}{dt} &= 1 &\\text{now INTEGRATE both sides w.r.t. t}\\\\\n",
+    "- \\int \\frac{k+s}{V.s} \\frac{ds}{dt} dt &= \\int dt\\\\\n",
+    "- \\int \\frac{k+s}{V.s} ds &= \\int dt\n",
+    "\\end{align*}\n",
+    "\n",
     "\n",
     "It is important to recognise that we *cannot integrate* the LHS as it is too complicated! Instead we must make some simplifying assumptions that allow us to integrate the LHS, but only in certain regimes.\n",
     "\n"
@@ -469,13 +457,13 @@
     "\n",
     "If $s \\gg k$ we can rewrite the last step as \n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "- \\int \\frac{s}{V.s}. ds &=& \\int dt\\\\\n",
-    "- \\int \\frac{1}{V} .ds &=& \\int dt &\\text{since $V$ is a constant we can do this}\\\\\n",
-    "\\int ds &=& -V \\int dt\\\\\n",
-    "s + a &=& -Vt + b &\\text{where $a$ & $b$ are constants of integration}\\\\\n",
-    "s &=& -Vt + c &\\text{where $c=b-a$}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "- \\int \\frac{s}{V.s}. ds &= \\int dt\\\\\n",
+    "- \\int \\frac{1}{V} .ds &= \\int dt &\\text{since $V$ is a constant we can do this}\\\\\n",
+    "\\int ds &= -V \\int dt\\\\\n",
+    "s + a &= -Vt + b &\\text{where $a$ and $b$ are constants of integration}\\\\\n",
+    "s &= -Vt + c &\\text{where $c=b-a$}\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "$$\n",
     "\\boxed{s = -Vt + c}\n",
@@ -487,11 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -573,12 +557,13 @@
     "\n",
     "The half-life is the length of time it takes for the amount to half (e.g. decay). As shown above, when $t=t_{1/2}$, $s=s_0/2$. We can substitute these above leading to\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "- \\int^{s_0/2}_{s_0} \\frac{ds}{V} &=& \\int^{t_{1/2}}_0 dt\\\\\n",
-    "- \\left [ \\frac{s}{V} \\right ]^{s_0/2}_{s_0} &=& \\left [ t \\right ]^{t_{1/2}}_0\\\\\n",
-    "- \\frac{s_0}{2V} +\\frac{s_0}{V} &=& t_{1/2}\\\\\n",
-    "- \\frac{s_0}{2V} &=& t_{1/2}\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "- \\int^{s_0/2}_{s_0} \\frac{ds}{V} &= \\int^{t_{1/2}}_0 dt\\\\\n",
+    "- \\left [ \\frac{s}{V} \\right ]^{s_0/2}_{s_0} &= \\left [ t \\right ]^{t_{1/2}}_0\\\\\n",
+    "- \\frac{s_0}{2V} +\\frac{s_0}{V} &= t_{1/2}\\\\\n",
+    "- \\frac{s_0}{2V} &=\n",
+    "t_{1/2}\n",
+    "\\end{align*}\n",
     "\n",
     "$$\\boxed{t_{1/2} = \\frac{s_0}{2V}}$$\n",
     "\n",
@@ -596,25 +581,21 @@
     "\n",
     "If $s \\ll k$ we can rewrite the differential equation as \n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "-\\frac{ds}{dt} &=& \\frac{V.s}{k}\\\\\n",
-    "- \\int \\frac{k}{V.s}. ds &=& \\int dt\\\\\n",
-    "- \\frac{k}{V} \\int \\frac{1}{s}. ds &=& \\int dt &\\text{since $k$ & $V$ are both constants we can take them out of the integrand}\\\\\n",
-    "D - \\frac{k}{V} \\ln s &=& t + c &\\text{where $D$ & $c$ are constants of integration}\\\\\n",
-    "ln \\left | \\frac{B}{s} \\right | &=& \\frac{Vt}{k} &\\text{where $\\ln B = D-c$}\\\\\n",
-    "\\frac{B}{s} &=& \\pm e^{Vt/k} &\\text{have to choose the positive or negative solution; let's choose the positive solution}\\\\\n",
-    "s &=& B e^{-Vt/k}\\\\\n",
-    "\\end{eqnarray*}$$"
+    "\\begin{align*}\n",
+    "-\\frac{ds}{dt} &= \\frac{V.s}{k}\\\\\n",
+    "- \\int \\frac{k}{V.s}. ds &= \\int dt\\\\\n",
+    "- \\frac{k}{V} \\int \\frac{1}{s}. ds &= \\int dt &\\text{since $k$ and $V$ are both constants we can take them out of the integrand}\\\\\n",
+    "D - \\frac{k}{V} \\ln s &= t + c &\\text{where $D$ and $c$ are constants of integration}\\\\\n",
+    "ln \\left | \\frac{B}{s} \\right | &= \\frac{Vt}{k} &\\text{where $\\ln B = D-c$}\\\\\n",
+    "\\frac{B}{s} &= \\pm e^{Vt/k} &\\text{have to choose the positive or negative solution; let's choose the positive solution}\\\\\n",
+    "s &= B e^{-Vt/k}\\\\\n",
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -699,12 +680,12 @@
     "\n",
     "As shown above, when $t=t_{1/2}$, $s=s_0/2$. We can substitute these above leading to\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "- \\int^{s_0/2}_{s_0} \\frac{k}{V} \\frac{ds}{s} &=& \\int^{t_{1/2}}_0 dt\\\\\n",
-    "- \\left [ \\frac{k}{V} \\ln |s|\\right ]^{s_0/2}_{s_0} &=& \\left [ t \\right ]^{t_{1/2}}_0\\\\\n",
-    "-\\frac{k}{V} \\ln |\\frac{s_0}{2}| + \\frac{k}{V} \\ln |s_0| &=& t_{1/2}\\\\\n",
-    "-\\frac{k}{V} \\ln \\left | \\frac{s_0}{s_0/2} \\right | &=& t_{1/2}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "- \\int^{s_0/2}_{s_0} \\frac{k}{V} \\frac{ds}{s} &= \\int^{t_{1/2}}_0 dt\\\\\n",
+    "- \\left [ \\frac{k}{V} \\ln |s|\\right ]^{s_0/2}_{s_0} &= \\left [ t \\right ]^{t_{1/2}}_0\\\\\n",
+    "-\\frac{k}{V} \\ln |\\frac{s_0}{2}| + \\frac{k}{V} \\ln |s_0| &= t_{1/2}\\\\\n",
+    "-\\frac{k}{V} \\ln \\left | \\frac{s_0}{s_0/2} \\right | &= t_{1/2}\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "$$\\boxed{t_{1/2} = \\frac{k}{V} \\ln 2}$$\n",
     "\n",
@@ -721,19 +702,19 @@
     "The rate of change is INDEPENDENT of concentration (or equivalently $\\propto s^0$ which is a constant). Characterised by a single positive constant, $k$.\n",
     "\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\frac{dA}{dt} &=& k &\\quad\\text{GROWTH}\\\\\n",
-    "\\frac{dA}{dt} &=& -k &\\quad\\text{DECAY}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "\\frac{dA}{dt} &= k &\\quad\\text{GROWTH}\\\\\n",
+    "\\frac{dA}{dt} &= -k &\\quad\\text{DECAY}\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "### First order process\n",
     "\n",
     "The rate of change is PROPORTIONAL to concentration (i.e. $\\propto s^1$). Characterised by a single positive constant, $k$.\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\frac{dA}{dt} &=& kA &\\quad\\text{GROWTH}\\\\\n",
-    "\\frac{dA}{dt} &=& -kA &\\quad\\text{DECAY}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "\\frac{dA}{dt} &= kA &\\quad\\text{GROWTH}\\\\\n",
+    "\\frac{dA}{dt} &= -kA &\\quad\\text{DECAY}\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "\n",
     "\n"
@@ -751,30 +732,37 @@
     "\n",
     "where $R$ is the Rydberg gas constant and $T$ is the absolute temperature. Can rewrite the above as\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\ln K &=& - \\frac{\\Delta G^o}{RT}\\\\\n",
-    "  &=& - \\frac{\\Delta H^o}{RT} + \\frac{\\Delta S^o}{R}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "\\ln K &= - \\frac{\\Delta G^o}{RT}\\\\\n",
+    "  &= - \\frac{\\Delta H^o}{RT} + \\frac{\\Delta S^o}{R}\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "If we assume that $\\Delta H^o$ and $\\Delta S^o$ are independent of $T$, then we can write\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\frac{d \\ln K}{dT} &=& \\frac{d}{dT} \\left ( - \\frac{\\Delta H^o}{R} T^{-1} \\right )\\\\\n",
-    "\\frac{d \\ln K}{dT} &=& \\frac{\\Delta H^o}{RT^2} &\\quad\\text{this is the VAN T'HOFF ISOCHORE}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "\\frac{d \\ln K}{dT} &= \\frac{d}{dT} \\left ( - \\frac{\\Delta H^o}{R} T^{-1} \\right )\\\\\n",
+    "\\frac{d \\ln K}{dT} &= \\frac{\\Delta H^o}{RT^2} &\\quad\\text{this is the VAN T'HOFF ISOCHORE}\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "Reintegrating this equation gives\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\int^{K_2}_{K_1} \\frac{d \\ln K}{dT}. dT &=& \\int^{T_2}_{T_1} \\frac{\\Delta H^o}{RT^2}. dT\\\\\n",
-    "\\int^{K_2}_{K_1} d(\\ln K) &=& \\left [ - \\frac{\\Delta H^o}{RT} \\right ]^{T_2}_{T_1}\\\\\n",
-    "\\ln K_2 - \\ln K_1 &=& - \\frac{\\Delta H^o}{R} \\left ( \\frac{1}{T_2} - \\frac{1}{T_1} \\right )\\\\\n",
-    "\\ln \\left | \\frac{K_2}{K_1} \\right | = - \\frac{\\Delta H^o}{R} \\left ( \\frac{1}{T_2} - \\frac{1}{T_1} \\right )\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "\\int^{K_2}_{K_1} \\frac{d \\ln K}{dT}. dT &= \\int^{T_2}_{T_1} \\frac{\\Delta H^o}{RT^2}. dT\\\\\n",
+    "\\int^{K_2}_{K_1} d(\\ln K) &= \\left [ - \\frac{\\Delta H^o}{RT} \\right ]^{T_2}_{T_1}\\\\\n",
+    "\\ln K_2 - \\ln K_1 &= - \\frac{\\Delta H^o}{R} \\left ( \\frac{1}{T_2} - \\frac{1}{T_1} \\right )\\\\\n",
+    "\\ln \\left | \\frac{K_2}{K_1} \\right | &= - \\frac{\\Delta H^o}{R} \\left ( \\frac{1}{T_2} - \\frac{1}{T_1} \\right )\\\\\n",
+    "\\end{align*}\n",
     "\n",
     "\n",
     "as per your Thermodynamics notes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
