--- a/quantitative_biochemistry/Lecture 10 - Differential Equations II.ipynb
+++ b/quantitative_biochemistry/Lecture 10 - Differential Equations II.ipynb
@@ -499,7 +499,7 @@
     "Hence $[N] = \\frac{[N_0]}{2}$ when $t=t_0 + t_{1/2}$. Substituting these into the above equation we get\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{N_0}{2} &= N_0 e^{-\\lambda{t_0+t_{1/2}-t_0}}\\\\\n",
+    "\\frac{N_0}{2} &= N_0 e^{-\\lambda(t_0+t_{1/2}-t_0)}\\\\\n",
     "\\frac{1}{2} &= e^{-\\lambda t_{1/2}} &\\quad&\\text{take natural logs of both sides}\\\\\n",
     "\\ln \\left(\\frac{1}{2} \\right) &= -\\lambda t_{1/2} &\\quad&\\text{applying a log law}\\\\\n",
     "\\ln 2 &= \\lambda t_{1/2}\\\\\n",
@@ -633,7 +633,7 @@
    "source": [
     "## Decay example\n",
     "\n",
-    "The element radium (A=226) has a decay constant ($\\lambda$) of 13.6 $\\times 10^{-12}$ s^${-1}$. How many disintegrations per second will 1 g of radian produce? The half-life of radium is 1,662 years.\n",
+    "The element radium (A=226) has a decay constant ($\\lambda$) of 13.6 $\\times 10^{-12}$ s$^{-1}$. How many disintegrations per second will 1 g of radium produce? The half-life of radium is 1,662 years.\n",
     "\n",
     "1 g of radium contains \n",
     "\n",
