simplified Maxwell-Boltzmann due to feedback

--- a/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
+++ b/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "$$ f(v) = 4 \\pi \\left ( \\frac{m}{2 \\pi kT} \\right )^{3/2} v^2 e^{-\\frac{mv^2}{2kT}} $$\n",
     "\n",
-    "where $v$ is the speed of the molecule, $m$ is the mass of a molecule, $T$ is the absolute temperature (K) and $k$ is Boltzmann's constant ($1.38 \\times 10^{-23} $m$^2$ kg s$^{-2}$ K$^{-1}$). It tells us how likely we are to find molecules with speed $v$, for example"
+    "where $v$ is the speed of the molecule, $m$ is the mass of a molecule, $T$ is the absolute temperature (K) and $k$ is Boltzmann's constant ($1.38 \\times 10^{-23} \\text{m}^2 \\text{ kg s}^{-2} \\text{ K}^{-1}$). It tells us how likely we are to find molecules with speed $v$, for example"
    ]
   },
   {
@@ -332,10 +332,10 @@
     "We can't do this *directly*, so because this looks like $\\int f(g(v)).dv$ let's try *substituting* \n",
     "\n",
     "\\begin{align*}\n",
-    "z &= -\\frac{mv^2}{2kT} \\quad& v^2= -\\frac{2kTz}{m}\\\\\n",
-    "\\frac{dz}{dv} &= -\\frac{m.2v}{2kT}\\\\\n",
-    "&= -\\frac{mv}{kT}\\\\\n",
-    "\\frac{dv}{dz} &= -\\frac{kT}{mv}\\\\\n",
+    "z &= \\frac{mv^2}{2kT} \\quad& v^2= \\frac{2kTz}{m}\\\\\n",
+    "\\frac{dz}{dv} &= \\frac{m.2v}{2kT}\\\\\n",
+    "&= \\frac{mv}{kT}\\\\\n",
+    "\\frac{dv}{dz} &= \\frac{kT}{mv}\\\\\n",
     "\\end{align*}"
    ]
   },
@@ -347,10 +347,10 @@
     "\n",
     "\\begin{align*}\n",
     "\\bar{v} &= Q \\int^{v=\\infty}_{v=0} v^3e^{-\\frac{mv^2}{2kT}}.dv\\\\\n",
-    "&= Q \\int^{z=0}_{z=-\\infty} v^3 \\frac{kT}{mv} e^z. dz\\\\\n",
-    "&= Q \\int^{z=0}_{z=-\\infty} v^2 \\frac{kT}{m} e^z. dz \\quad &\\text{substitute for last }v\\\\\n",
-    "&= Q \\int^{z=0}_{z=-\\infty} -\\frac{2kTz}{m} \\frac{kT}{m} e^z. dz \\\\\n",
-    "&= -2Q\\left (\\frac{kT}{m} \\right )^2 \\int^{z=0}_{z=-\\infty}  z e^z. dz \\\\\n",
+    "&= Q \\int_{z=0}^{z=\\infty} v^3 \\frac{kT}{mv} e^{-z}. dz\\\\\n",
+    "&= Q \\int_{z=0}^{z=\\infty} v^2 \\frac{kT}{m} e^{-z}. dz \\quad &\\text{substitute for last }v\\\\\n",
+    "&= Q \\int_{z=0}^{z=\\infty} \\frac{2kTz}{m} \\frac{kT}{m} e^{-z}. dz \\\\\n",
+    "&= 2Q\\left (\\frac{kT}{m} \\right )^2 \\int_{z=0}^{z=\\infty}  z e^{-z}. dz \\\\\n",
     "\\end{align*}"
    ]
   },
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whilst it feels like we are making progress, we STILL can't integrate the form $\\int xe^x.dx$. We NEED another method"
+    "Whilst it feels like we are making progress, we STILL can't integrate the form $\\int xe^{-x}.dx$. We NEED another method"
    ]
   },
   {
@@ -540,7 +540,7 @@
     "\n",
     "We want to integrate the form\n",
     "\n",
-    "$$ \\int^\\infty_0 ze^z.dz $$\n",
+    "$$ \\int^\\infty_0 ze^{-z}.dz $$\n",
     "\n",
     "Apply *integration by parts*:\n",
     "\n",
@@ -550,7 +550,7 @@
     "\n",
     "\\begin{align*}\n",
     "u &=  z\\quad & u' &= 1\\\\\n",
-    "v' &=  e^z \\quad & v &= e^z\\\\\n",
+    "v' &=  e^{-z} \\quad & v &= -e^{-z}\\\\\n",
     "\\end{align*}\n"
    ]
   },
@@ -559,10 +559,12 @@
    "metadata": {},
    "source": [
     "\\begin{align*}\n",
-    "\\int_{-\\infty}^0 ze^z.dz &= \\left [ z.e^z \\right ]^\\infty_0 - \\int_{-\\infty}^0 1.e^z.dz\\\\\n",
-    "&= \\left [ z.e^z \\right ]^\\infty_0 - \\left [ e^z \\right ]_{-\\infty}^0\\\\\n",
-    "&= \\left [ z.e^z -e^z \\right ]_{-\\infty}^0\\\\\n",
-    "&= -1\n",
+    "\\int^{\\infty}_0 ze^{-z}.dz &= \\left [ z.e^{-z} \\right ]^\\infty_0 - \\int^{\\infty}_0 -1.e^{-z}.dz\\\\\n",
+    "&= \\left [ z.e^{-z} \\right ]^\\infty_0 + \\int^{\\infty}_0 e^{-z}.dz\\\\\n",
+    "&= \\left [ z.e^{-z} \\right ]^\\infty_0 + \\left [ -e^{-z} \\right ]^{\\infty}_0\\\\\n",
+    "&= \\left [ z.e^{-z} -e^{-z} \\right ]^{\\infty}_0\\\\\n",
+    "&= (0-0)-(0-1)\\\\\n",
+    "&= 1\n",
     "\\end{align*}"
    ]
   },
@@ -573,10 +575,10 @@
     "Back to the Maxwell-Boltzmann..\n",
     "\n",
     "\\begin{align*}\n",
-    "\\bar{v} &= -2Q\\left (\\frac{kT}{m} \\right )^2 \\int^{z=0}_{z=-\\infty}  z e^z. dz \\\\\n",
+    "\\bar{v} &= 2Q\\left (\\frac{kT}{m} \\right )^2 \\int^{z=\\infty}_{z=0}  z e^{-z}. dz \\\\\n",
     "\\end{align*}\n",
     "\n",
-    "Woo. We've just shown that the integral is $-1$! So we can solve for the average (or expected) speed!\n",
+    "Woo. We've just shown that the integral is $1$! So we can solve for the average (or expected) speed!\n",
     "\n",
     "$$\\bar{v} = 2Q\\left (\\frac{kT}{m} \\right )^2$$"
    ]
@@ -597,8 +599,14 @@
     "\\end{align*}\n",
     "\n",
     "Let's check this makes sense. First, consider the *dimensions* of the constants $k,T,m$. We can cheat a bit since $kT$ has units of energy so its dimensions are [ML$^2$T$^{-2}$] and mass has dimensions [M]. Hence $\\frac{kT}{m}$ has dimensions [L$^2$T$^{-2}$] but we are taking the square root, so the dimensions of the RHS (and hence the LHS) are [LT$^{-1}$], which is 'length per unit time' i.e. a speed!\n",
-    "\n",
-    "Another way of checking is putting some values in and seeing if the values we get are reasonable. Let's calculate the average speed of air at room temperature. If we model air as nitrogen, then $m = 0.028$ kg/mol, or $m =4.67 \\times 10^{-26}$ kg. Boltzmann's constant $k= 1.38 \\times 10^{-23}$ and $T=298$ K. Putting all that together we get $\\bar{v} = 473 $ m/s (3.s.f). Is that reasonable? Well we know that the speed of sound in air is 330 m/s (3 seconds gap between lightning and thunder means the storm is 1 km away) and so that is in the right range!"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way of checking is putting some values in and seeing if the values we get are reasonable. Let's calculate the average speed of air at room temperature. If we model air as nitrogen, then $m = 0.028$ kg/mol, or $m =4.67 \\times 10^{-26}$ kg. Boltzmann's constant $k= 1.38 \\times 10^{-23}$ and $T=298$ K. Putting all that together we estimate that the average speed is 473 m/s (3.s.f). Is that reasonable? Well we know that the speed of sound in air is 330 m/s (3 seconds gap between lightning and thunder means the storm is 1 km away) and so that is in the right range!"
    ]
   },
   {
