added warmups and challenges to L11

--- a/quantitative_biochemistry/Lecture 11 - Reaction Rates.ipynb
+++ b/quantitative_biochemistry/Lecture 11 - Reaction Rates.ipynb
@@ -23,7 +23,86 @@
    "source": [
     "# Warm-up exercises\n",
     "\n",
-    "FIXME"
+    "\n",
+    "\\begin{align*}\n",
+    "&1.\\quad & \\frac{dN}{dt} &= k &\\text{Find } N &=\\\\\n",
+    "&2.\\quad & \\frac{dN}{dt} &= kN &\\text{Find } N&=\\\\\n",
+    "&3. \\quad & \\frac{dN}{dt} &= -kN &\\text{Find } N&=\\\\\n",
+    "&4. \\quad & \\frac{dy}{dx} &= \\sin x &\\text{Find } y&=\\\\\n",
+    "&5. \\quad &&& \\text{write 100 litres in m}^3&=\\\\\n",
+    "&6. \\quad &&& \\ln 4^3 - \\ln 4^2=\\\\\n",
+    "&7. \\quad &&& \\frac{\\sqrt{8}\\pi^{3/2}}{4\\pi^2\\pi^{1/2}} =\\\\\n",
+    "&8.\\quad & \\text{Write 1m}^3 \\text{ in cm}^3.\\\\ \n",
+    "\\end{align*}\n",
+    "9. At a College there are 306 students. The male:female ratio is 1:8. How many men are there?\n",
+    "\n",
+    "10. If 35 $\\mu$l of 2.5 M HCL is added to 125 $\\mu$l of 0.5 HCl what is the concentration of the final solution?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenges"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b> Answer to Week 6 challenge. \n",
+    "There are a hundred switches. Each time you press one it goes from off to on or vice versa. Each is connected to a light bulb. 100 frogs are lined up. Frog 1 jumps on all the switches, turning on all the lights. Frog 2 jumps on switches 2,4,6,..100, turning off all the even numbered lights. Frog 3 jumps on switches 3,6,9...,99 thereby turning some lights off (e.g. 3) on some back on (e.g. 6). The frogs take it in turn until Frog 100 jumps only on switch 100. After the last frog has jumped, how many lights are still on?\n",
+    "</div>\n",
+    "\n",
+    "The key to this puzzle is to realise that it is really a question about which numbers between 1 and 100 have odd factors all the light bulbs start off and each light bulb is jumped on by each frog corresponding to one of its factors. So frog 1 jumps on all the light bulbs since 1 is a factor of all the numbers between 1 and 100. Consider light bulb 12: it will be jumped on by frogs 1,2,3,4,6 and 12 which is an even number so it will be off after the last frog. All are by definition a pair of numbers *except* for pairs where the number is reapeated i.e. square numbers. Hence only the square numbers will be jumped on an odd number of times and so will remain on after frog 100. The answer is therefore 10 light bulbs: 1,4,9,16,25,36,49,64,81,100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "2 [1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
+      "3 [1, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "4 [1, 0, 0, 1, 1, 1, 1, 1, 0, 0]\n",
+      "5 [1, 0, 0, 1, 0, 1, 1, 1, 0, 1]\n",
+      "6 [1, 0, 0, 1, 0, 0, 1, 1, 0, 1]\n",
+      "7 [1, 0, 0, 1, 0, 0, 0, 1, 0, 1]\n",
+      "8 [1, 0, 0, 1, 0, 0, 0, 0, 0, 1]\n",
+      "9 [1, 0, 0, 1, 0, 0, 0, 0, 1, 1]\n",
+      "10 [1, 0, 0, 1, 0, 0, 0, 0, 1, 0]\n",
+      "\n",
+      "After frog 10 the number of light bulbs that are on is 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "light_bulbs=[0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]\n",
+    "\n",
+    "for frog in range(1,11):\n",
+    "    for hop in range(1,11):\n",
+    "        if (hop%frog)==0:\n",
+    "            light_bulbs[hop-1]=int(light_bulbs[hop-1]!=1)\n",
+    "    print(frog, light_bulbs)\n",
+    "\n",
+    "print(\"\\nAfter frog 10 the number of light bulbs that are on is \"+str(sum(light_bulbs)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b> Week 7 Challenge: I have 8 identical balls, and a ninth that looks identical but which is either lighter or heavier than the others. I have a pair of weighing scales which are the old  fashioned balance ones with a plate on each side of the balance point. I am allowed three uses of these scales to identify the odd ball. How can I do it?\n",
+    "</div>"
    ]
   },
   {
