--- a/quantitative_biochemistry/Lecture 11 - Reaction Rates.ipynb
+++ b/quantitative_biochemistry/Lecture 11 - Reaction Rates.ipynb
@@ -29,10 +29,10 @@
     "&2.\\quad & \\frac{dN}{dt} &= kN &\\text{Find } N&=\\\\\n",
     "&3. \\quad & \\frac{dN}{dt} &= -kN &\\text{Find } N&=\\\\\n",
     "&4. \\quad & \\frac{dy}{dx} &= \\sin x &\\text{Find } y&=\\\\\n",
-    "&5. \\quad &&& \\text{write 100 litres in m}^3&=\\\\\n",
-    "&6. \\quad &&& \\ln 4^3 - \\ln 4^2=\\\\\n",
-    "&7. \\quad &&& \\frac{\\sqrt{8}\\pi^{3/2}}{4\\pi^2\\pi^{1/2}} =\\\\\n",
-    "&8.\\quad & \\text{Write 1m}^3 \\text{ in cm}^3.\\\\ \n",
+    "&5. \\quad && \\frac{1}{400}-\\frac{1}{500} &&=\\\\\n",
+    "&6. \\quad && \\ln 4^3 - \\ln 4^2&&=\\\\\n",
+    "&7. \\quad && \\frac{\\sqrt{8}\\pi^{3/2}}{4\\pi^2\\pi^{1/2}} &&=\\\\\n",
+    "&8.\\quad && \\text{Write 1m}^3 \\text{ in cm}^3\\\\ \n",
     "\\end{align*}\n",
     "9. At a College there are 306 students. The male:female ratio is 1:8. How many men are there?\n",
     "\n",
